--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby": "^5.12.9",
     "gatsby-plugin-mdx": "^5.12.3",
     "gatsby-source-filesystem": "^5.12.1",
+    "node-fetch": "^2.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2"
